test-cases/negative/basic_003_missing_variable_keyword.lay
# negative test case: missing 'variable' keyword
# expected error: Missing 'variable' keyword in declaration
# description: Tests that 'the variable' pattern is required

the x is 5


